Temporary add libmkl-dev to travis
Should be installed by libdlib-dev.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     sources:
       - sourceline: "ppa:kagamih/dlib"
     packages:
+      - libmkl-dev
       - libdlib-dev
       - libjpeg-turbo8-dev
 notifications:
