Install GCC 7 on travis
GCC 6+ is required for shared_mutex. C++14 shared_timed_mutex seems to
be much slower: https://redd.it/4xa8fw

Also shared_mutex might be ineffecient for frequent short reads
(https://stackoverflow.com/a/45580208) but it shouldn't be a bottleneck
because recognition takes several hundred ms.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ go:
 addons:
   apt:
     sources:
+      - ubuntu-toolchain-r-test
       - sourceline: "ppa:kagamih/dlib"
     packages:
+      - g++-7
       - libdlib-dev
       - libjpeg-turbo8-dev
+env:
+  - CXX=g++-7
 notifications:
   email:
     on_success: never
