Fix toolchain PPA source
Shortcut is not allowed for xenial.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+      - sourceline: "ppa:ubuntu-toolchain-r/test"
       - sourceline: "ppa:kagamih/dlib"
     packages:
       - g++-7
