--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ addons:
     packages:
       - libdlib-dev
       - libblas-dev
+      - libatlas-base-dev
       - liblapack-dev
       - libjpeg-turbo8-dev
 notifications:
